crates/component-cli/tests/snapshots/test__cli_local_help_snapshot.snap
---
source: crates/component-cli/tests/test.rs
expression: output
---
Detect and manage local WASM files

Usage: component local [OPTIONS] <COMMAND>

Commands:
  list   List local WASM files in the current directory
  clean  Remove the lockfile and vendored dependencies
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
