crates/component-cli/tests/snapshots/test__cli_registry_delete_help_snapshot.snap
---
source: crates/component-cli/tests/test.rs
expression: output
---
Delete a package from the local store

Usage: component registry delete [OPTIONS] <REFERENCE>

Arguments:
  <REFERENCE>  The reference to delete (e.g., ghcr.io/example/component:tag)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
