crates/component-cli/tests/snapshots/test__cli_registry_notify_help_snapshot.snap
---
source: crates/component-cli/tests/test.rs
expression: output
---
Notify a meta-registry that a new version of a package is available

Usage: component registry notify [OPTIONS] <PACKAGE>

Arguments:
  <PACKAGE>  The newly-published package, given as a WIT-style name (e.g., `wasi:http@0.2.11`)

Options:
      --registry-url <REGISTRY_URL>
          URL of the meta-registry to notify [default: http://localhost:8080]
  -h, --help
          Print help
  -V, --version
          Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
