crates/component-cli/tests/snapshots/test__cli_registry_pull_help_snapshot.snap
---
source: crates/component-cli/tests/test.rs
expression: output
---
Pull a component from the registry

Usage: component registry pull [OPTIONS] <REFERENCE>

Arguments:
  <REFERENCE>  The reference to pull

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
